Prevent event tiles being shrunk/collapsed by flexbox (#7942)

--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -36,7 +36,6 @@ limitations under the License.
     margin-top: var(--gutterSize);
     margin-left: 49px;
     font-size: $font-14px;
-    flex-shrink: 0;
 
     .mx_ThreadInfo {
         clear: both;
